--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@ h2{
   text-align:center;
 }
 
+h3{
+  margin-bottom:10px;
+  font-size:1.4rem;
+  border-left:4px solid #4caf50;
+  padding-left:10px;
+}
+
+.why{
+  margin-top:6px;
+  font-size:0.9rem;
+  color:#333;
+}
+
+.ref{
+  margin-top:4px;
+  font-size:0.75rem;
+  color:#666;
+  font-style:italic;
+}
+
 .grid{
   margin-top:20px;
   display:grid;
@@ -145,23 +165,48 @@ Heritage Moments • Living Cultural Registry
 fetch("./master_heritage.json")
 .then(r => r.json())
 .then(data => {
-  const grid = document.getElementById("grid");
 
+  const container = document.getElementById("grid");
+  container.innerHTML = "";
+
+  // 1. Group by category
+  const grouped = {};
   data.forEach(o => {
-    const d = document.createElement("div");
-    d.className = "card";
+    const cat = o.category || o.domain || "Other";
+    if (!grouped[cat]) grouped[cat] = [];
+    grouped[cat].push(o);
+  });
 
-    d.innerHTML = `
-      <div class="name">${o.name || ("Occasion " + o.id)}</div>
+  // 2. Render category-wise
+  Object.keys(grouped).sort().forEach(cat => {
 
-      ${o.why ? `<div class="why">${o.why}</div>` : ""}
+    // Category heading
+    const h = document.createElement("h3");
+    h.textContent = cat;
+    h.style.marginTop = "40px";
+    h.style.textAlign = "left";
+    container.appendChild(h);
 
-      ${o.reference ? `<div class="ref">Reference: ${o.reference}</div>` : ""}
+    // Category grid
+    const section = document.createElement("div");
+    section.className = "grid";
 
-      <div class="domain">${o.category || o.domain || ""}</div>
-    `;
+    grouped[cat].forEach(o => {
+      const d = document.createElement("div");
+      d.className = "card";
 
-    grid.appendChild(d);
+      d.innerHTML = `
+        <div class="name">${o.name || ("Occasion " + o.id)}</div>
+
+        ${o.why ? `<div class="why">${o.why}</div>` : ""}
+
+        ${o.reference ? `<div class="ref">Reference: ${o.reference}</div>` : ""}
+      `;
+
+      section.appendChild(d);
+    });
+
+    container.appendChild(section);
   });
 });
 </script>
