--- a/index.html
+++ b/index.html
@@ -224,22 +224,22 @@ In Hindu tradition, whenever a meaningful beginning, transition, or celebration 
   <div class="vidwaan-grid">
 
     <div class="vidwaan-card">
-      <img src="nadaswaram.png" alt="Nadaswaram Vidwaan">
+      <img src="nadaswaram1.png" alt="Nadaswaram Vidwaan">
       <div class="vidwaan-name">Nadaswaram(Shehnai)</div>
     </div>
 
     <div class="vidwaan-card">
-      <img src="dolu.png" alt="Dolu Vidwaan">
+      <img src="dolu1.png" alt="Dolu Vidwaan">
       <div class="vidwaan-name">Dolu(Thavil)</div>
     </div>
 
     <div class="vidwaan-card">
-      <img src="saxophone.png" alt="Saxophone Vidwaan">
+      <img src="saxophone1.png" alt="Saxophone Vidwaan">
       <div class="vidwaan-name">Saxophone</div>
     </div>
 
     <div class="vidwaan-card">
-      <img src="drum.png" alt="Drum Vidwaan">
+      <img src="drum1.png" alt="Drum Vidwaan">
       <div class="vidwaan-name">Drum</div>
     </div>
 
