--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ h3{
   margin-top:4px;
 }
 
-.vidwaan-section{
+/* Vidwaan section */
 .vidwaan-section{
   margin-top:30px;
   margin-bottom:40px;
@@ -98,35 +98,34 @@ h3{
 
 .vidwaan-grid{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
-  gap:24px;
+  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
+  gap:20px;
   margin-top:20px;
-  align-items:end;
 }
 
 .vidwaan-card{
-  background:transparent;
-  border-radius:14px;
-  padding:8px;
+  background:#fff;              /* ✅ white background */
+  border-radius:16px;
+  padding:14px;
+  box-shadow:0 8px 22px rgba(0,0,0,.12);
   transition:transform .25s ease, box-shadow .25s ease;
 }
 
 .vidwaan-card:hover{
-  transform:translateY(-6px) scale(1.03);
-  box-shadow:0 12px 28px rgba(0,0,0,.18);
+  transform:translateY(-6px);
+  box-shadow:0 14px 30px rgba(0,0,0,.18);
 }
 
 .vidwaan-card img{
   width:100%;
-  max-width:120px;
-  height:140px;
+  height:150px;
   object-fit:contain;
   filter:grayscale(100%) contrast(1.1);
 }
 
 .vidwaan-name{
   margin-top:8px;
-  font-size:0.85rem;
+  font-size:0.9rem;
   font-weight:600;
   color:#222;
 }
@@ -149,25 +148,25 @@ h3{
   border-radius:8px;
   border-left:5px solid #4caf50;
   font-size:1.3rem;
+  margin-top:30px;
 }
 
 .category-header::after{
   content:"➕";
   float:right;
-  font-size:1rem;
 }
 
 .category-header.active::after{
   content:"➖";
 }
 
+/* 🔴 FORCE CLOSED BY DEFAULT (ALL DEVICES) */
 .category-content{
-  display:none;
-  margin-top:10px;
+  display:none !important;
 }
 
 .category-content.open{
-  display:block;
+  display:block !important;
 }
   
 footer{
@@ -266,7 +265,7 @@ Heritage Moments • Living Cultural Registry
 
 <script>
 fetch("./master_heritage.json")
-.then(r => r.json())
+.then(response => response.json())
 .then(data => {
 
   const container = document.getElementById("grid");
@@ -274,22 +273,22 @@ fetch("./master_heritage.json")
 
   const grouped = {};
 
-  // Group by category
+  // 1️⃣ Group occasions by category
   data.forEach(o => {
     const cat = o.cat || o.category || o.domain || "Other";
     if (!grouped[cat]) grouped[cat] = [];
     grouped[cat].push(o);
   });
 
-  // Alphabetical order
+  // 2️⃣ Render categories in alphabetical order
   Object.keys(grouped).sort().forEach(cat => {
 
-    // Header
+    // Category header
     const header = document.createElement("div");
     header.className = "category-header";
     header.textContent = cat;
 
-    // Content wrapper
+    // Category content (collapsed by default)
     const content = document.createElement("div");
     content.className = "category-content";
 
@@ -313,21 +312,26 @@ fetch("./master_heritage.json")
 
     content.appendChild(section);
 
-    // Toggle behavior
-    header.onclick = () => {
-      const open = content.classList.contains("open");
+    // 3️⃣ Accordion toggle logic (same for desktop & mobile)
+    header.addEventListener("click", () => {
+      const isOpen = content.classList.contains("open");
+
       document.querySelectorAll(".category-content").forEach(c => c.classList.remove("open"));
       document.querySelectorAll(".category-header").forEach(h => h.classList.remove("active"));
 
-      if (!open) {
+      if (!isOpen) {
         content.classList.add("open");
         header.classList.add("active");
       }
-    };
+    });
 
     container.appendChild(header);
     container.appendChild(content);
   });
+
+})
+.catch(err => {
+  console.error("Failed to load heritage data:", err);
 });
 </script>
 
