--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ In Hindu tradition, whenever a meaningful beginning, transition, or celebration 
 
 <h2>Occasions Where Auspicious Music Is Performed</h2>
 
-<div id="grid" class="grid"></div>
+<div id="accordion"></div>
 
 <footer>
 Heritage Moments • Living Cultural Registry
