--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ In Hindu tradition, whenever a meaningful beginning, transition, or celebration 
 
     <div class="vidwaan-card">
       <img src="nadaswaram1.png" alt="Nadaswaram Vidwaan">
-      <div class="vidwaan-name">Nadaswaram(Shehnai)</div>
+      <div class="vidwaan-name">Nadaswaram</div>
     </div>
 
     <div class="vidwaan-card">
@@ -262,7 +262,7 @@ In Hindu tradition, whenever a meaningful beginning, transition, or celebration 
   </div>
 
   <div class="vidwaan-note">
-    Some other Vidwaans also traditionally or regionally used. 
+    Some other Vidwaans are also traditionally or regionally used.
   </div>
 
 </div>
